# Spectrum-monitor

./: Cargo.toml  readme.md
src/: audio.rs  compute.rs  draw.wgsl  egui_app.rs  main.rs  main1.rs  shader.wgsl  wgpu_app.rs  wgpu_helper.rs  winit_app.rs
