[package]
name = "music_play"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytemuck = "1.21.0"
cpal = "0.15.3"
egui = "0.30.0"
egui-wgpu = "0.30.0"
egui-winit = "0.30.0"
env_logger = "0.11.6"
frame_counter = "0.1.2"
image = "0.25.5"
pollster = "0.4.0"
rand = "0.9.0"
rustfft = "6.2.0"
tokio = { version = "1.43.0", features = ["full",  "rt-multi-thread"] }
tokio-stream = "0.1.17"
wgpu = "24.0.1"
winit = "0.30.8"
